--- a/config/nav2_dwb_params.yaml
+++ b/config/nav2_dwb_params.yaml
@@ -188,9 +188,9 @@ local_costmap:
       width: 5
       height: 5
       resolution: 0.05 
-      # robot_radius: 0.3
+      robot_radius: 0.15
       # footprint: "[[0.300, 0], [0.2638, 0.1295], [0.1253, 0.2384], [0, 0.250], [-0.1253, 0.2384], [-0.2638, 0.1295], [-0.300, 0], [-0.2638, -0.1295], [-0.1253, -0.2384], [0, -0.250], [0.1253, -0.2384], [0.2638, -0.1295]]"
-      footprint: "[[0.350,0.000],[0.3345, 0.1295], [0.196, 0.2384], [0.000,0.300][-0.196, 0.2384], [-0.3345, 0.1295], [-0.350,0.000],[-0.3345, -0.1295], [-0.196, -0.2384], [0.000,-0.300],[0.196, -0.2384], [0.3345, -0.1295]]"
+      #footprint: "[[0.350,0.000],[0.3345, 0.1295], [0.196, 0.2384], [0.000,0.300][-0.196, 0.2384], [-0.3345, 0.1295], [-0.350,0.000],[-0.3345, -0.1295], [-0.196, -0.2384], [0.000,-0.300],[0.196, -0.2384], [0.3345, -0.1295]]"
       
       plugins: ["obstacle_layer", "inflation_layer"]
       inflation_layer:
@@ -227,7 +227,7 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_footprint
       use_sim_time: True
-      robot_radius: 0.20
+      robot_radius: 0.15
       resolution: 0.05
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
