--- a/map/wonik_4th.yaml
+++ b/map/wonik_4th.yaml
@@ -1,7 +1,8 @@
-image: wonik_4th.png
+image: ./wonik_4th.png
 resolution: 0.050000
-origin: [-100.000000, -100.000000, 0.000000]
+origin: [0, 0, 0]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
+#origin: [-119.000000, -82.000000, 1.570796]
 
